Remove testimonial, fixing left padding on mobile.

--- a/src/app/components/cometa-devices/cometa-devices.component.scss
+++ b/src/app/components/cometa-devices/cometa-devices.component.scss
@@ -14,8 +14,12 @@
 
 .section-laptop {
     /* @include flexbox($dir: column, $justify: center, $align: center); */
-    @include padding($top: 1%, $right: 1%, $bottom: calc(1% + 50px), $left: 1%);
+    @include padding($top: 1%, $right: 1%, $bottom: calc(1% + 50px), $left: 5%);
     overflow-x: hidden;
+
+    @include for-tablet-portrait-up(tablet-plus-100) {
+        @include padding($top: 1%, $right: 1%, $bottom: calc(1% + 50px), $left: 10%);
+    }
     
     /* style for wrapper to pick up text and video on top of the page */
     .wrapper-devices-text-and-video {
